--- a/index.html
+++ b/index.html
@@ -260,22 +260,17 @@
         }
 
         async function getPronunciations(vocabulary) {
-            const apiUrl = `https://cors-anywhere.herokuapp.com/https://api.dictionaryapi.dev/api/v2/entries/en/${vocabulary}`;
+            const apiUrl = `https://api.dictionaryapi.dev/api/v2/entries/en/${vocabulary}`;
             try {
                 const response = await fetch(apiUrl);
-                if (!response.ok) {
-                    throw new Error("Network response was not ok");
-                }
                 const data = await response.json();
-                const usPronunciation = data[0].phonetics.find(p => p.audio).audio || "N/A";
-                const ukPronunciation = data[0].phonetics.find(p => p.audio && p.text === 'UK')?.audio || "N/A";
-                return {
-                    us: usPronunciation,
-                    uk: ukPronunciation
-                };
+
+                const usPronunciation = data[0]?.phonetics?.find(p => p.audio.includes("us"))?.text || "N/A";
+                const ukPronunciation = data[0]?.phonetics?.find(p => p.audio.includes("uk"))?.text || "N/A";
+
+                return { us: usPronunciation, uk: ukPronunciation };
             } catch (error) {
-                console.error("Error fetching pronunciations:", error);
-                alert("Could not fetch pronunciations. Please try again later.");
+                console.error("Error fetching pronunciation:", error);
                 return { us: "N/A", uk: "N/A" };
             }
         }
